--- a/bitrix/templates/riep_new/css/styles.css
+++ b/bitrix/templates/riep_new/css/styles.css
@@ -1567,3 +1567,78 @@ h2+.postgraduate-admission-blocks {margin:30px 0 0 0}
     .postgraduate-btns {display:block}
     .postgraduate-btns a {display:block; margin:20px 0 0 0}
 }
+
+.science {margin:60px 0 0 0}
+.science h2 {margin:80px 0 20px 0; font:500 24px/1.3em GothamPro, sans-serif; text-transform:none}
+.science h2:first-child {margin-top:0}
+
+@media screen and (max-width:1169px) {
+    .science h2 {margin:60px 0 20px 0}
+}
+
+.science-advisor {margin:20px 0; padding:30px; background:rgba(68, 170, 220, 0.1)}
+.science-advisor p {margin:10px 0}
+.science-advisor ul {margin:10px 0; padding:0}
+.science-advisor ul li {margin:10px 0; padding:0 0 0 34px}
+.science-advisor ul li::before {content:"—"; top:0; width:auto; height:auto; background:none; border-radius:0; color:#8C8C91}
+.science-advisor *:first-child {margin-top:0}
+.science-advisor *:last-child {margin-bottom:0}
+
+@media screen and (max-width:1169px) {
+    .science-advisor {padding:20px}
+}
+
+.monographs {margin:40px 0 0 0}
+.monographs-item {margin:40px 0 0 0; display:flex}
+.monographs-item:first-child {margin:0}
+.monographs-item-info {min-width:312px; max-width:312px}
+.monographs-item-info-img img {display:block; width:100%}
+.monographs-item-info-link {margin:20px 0 0 0}
+.monographs-item-info-link a {display:flex; height:50px; align-items:center; justify-content:center; background:#44AADC; text-decoration:none; color:#FFFFFF; font-weight:500; font-size:14px; line-height:1em; text-transform:uppercase; transition:background 0.2s}
+.monographs-item-info-link a:hover {background:#002B5D}
+.monographs-item-info-link a:active {background:#001E40}
+.monographs-item-info-link a span {min-width:1px; max-width:1px; height:24px; background:rgba(239, 239, 239, 0.25); margin:0 10px}
+.monographs-item-info-link a svg {min-width:24px; max-width:24px; height:24px; fill:#FFFFFF; margin:0 10px 0 0}
+.monographs-item-sep {min-width:1px; max-width:1px; margin:0 40px; background:#EFEFEF}
+.monographs-item-content {width:100%}
+.monographs-item-title {font-weight:500; font-size:20px; line-height:1.5em}
+.monographs-item-title span {display:none}
+.monographs-item-authors {margin:20px 0 0 0; font-size:13px; line-height:1.4em; font-style:italic; color:rgba(0, 0, 0, 0.7)}
+.monographs-item-anonce {margin:20px 0 0 0}
+.monographs-item-anonce p {margin:10px 0 0 0}
+.monographs-item-anonce ul {margin:5px 0 0 0; padding:0}
+.monographs-item-anonce ul li {margin:5px 0 0 0; padding:0 0 0 34px}
+.monographs-item-anonce ul li::before {content:"—"; top:0; width:auto; height:auto; background:none; border-radius:0; color:#8C8C91}
+.monographs-item-info-link-mobile {display:none}
+.monographs-item-info-img-mobile {display:none}
+
+@media screen and (min-width:1170px) {
+    .monographs-item-detail {display:block !important}
+}
+
+@media screen and (max-width:1169px) {
+    .monographs {margin:20px 0 0 0}
+    .monographs-item {margin:20px 0 0 0; padding:20px 0 0 0; display:block; border-top:1px solid #EFEFEF}
+    .monographs-item-info {display:none}
+    .monographs-item-sep {display:none}
+    .monographs-item-content {width:auto}
+    .monographs-item-title {font-weight:normal; font-size:18px; line-height:1.3em; color:#002B5D; display:flex; align-items:flex-start}
+    .monographs-item-title span {display:flex; align-items:center; justify-content:center; min-width:32px; max-width:32px; margin:0 0 0 20px; height:32px; background:#F2F5F5; border-radius:50%; transition:background 0.2s}
+    .monographs-item.open .monographs-item-title span {background:#002B5D}
+    .monographs-item-title span svg {width:24px; height:24px; fill:#002B5D; transition:fill 0.2s, transform 0.2s}
+    .monographs-item.open .monographs-item-title span svg {fill:#FFFFFF; transform:rotate(-180deg)}
+    .monographs-item-detail {display:none; margin:20px 0 0 0}
+    .monographs-item-info-link-mobile {display:block; margin:10px 0 0 0}
+    .monographs-item-info-link-mobile a {display:flex; height:50px; align-items:center; justify-content:center; background:#44AADC; text-decoration:none; color:#FFFFFF; font-weight:500; font-size:14px; line-height:1em; text-transform:uppercase; transition:background 0.2s}
+    .monographs-item-info-link-mobile a span {min-width:1px; max-width:1px; height:24px; background:rgba(239, 239, 239, 0.25); margin:0 10px}
+    .monographs-item-info-link-mobile a svg {min-width:24px; max-width:24px; height:24px; fill:#FFFFFF; margin:0 10px 0 0}
+    .monographs-item-authors {display:flex; margin:0}
+    .monographs-item-info-img-mobile {display:block; min-width:166px; max-width:166px}
+    .monographs-item-info-img-mobile img {display:block; width:100%}
+    .monographs-item-authors-inner {margin:0 0 0 20px}
+}
+
+.science-sources {font-size:13px; line-height:1.5em}
+.science-sources ol {margin:20px 0; padding:0; list-style:none}
+.science-sources ol li {margin:15px 0; padding:0 0 0 40px; position:relative}
+.science-sources ol li::before {color:#002B5D; font-weight:300}
